--- a/index.html
+++ b/index.html
@@ -15,12 +15,11 @@
 	</header>
 	<section id="game-boards">
 		<!-- these are the draggable pieces -->
-		<div id="puzzle-pieces">
+		<div class="puzzle-pieces">
 			<img src="images/topLeft0.jpg" class="puzzle-image" alt="top left piece">
 			<img src="images/topRight0.jpg" class="puzzle-image" alt="top right piece">
 			<img src="images/bottomLeft0.jpg" class="puzzle-image" alt="bottom left piece">
-			<img src="images/bottomRight0.jpg" class="puzzle-image
-			" alt="bottm right piece">
+			<img src="images/bottomRight0.jpg" class="puzzle-image" alt="bottm right piece">
 		</div>
 
 		<!-- where we want to drop pieces, dropzone -->
