FIx bug 2 resetting
In this commit, the bug of resetting and choosing a new puzzle was fixed to give user a fresh board to drop onto. The reset button was also given some CSS rules to make it look better.

--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
 		<p>solve the puzzle</p>
 	</header>
 	<section id="game-boards">
+		<h2 class="hidden">Game Boards</h2>
 		<!-- these are the draggable pieces -->
 		<div class="puzzle-pieces">
 			<img src="images/topLeft0.jpg" class="puzzle-image" alt="top left piece">
 			<img src="images/topRight0.jpg" class="puzzle-image" alt="top right piece">
 			<img src="images/bottomLeft0.jpg" class="puzzle-image" alt="bottom left piece">
-			<img src="images/bottomRight0.jpg" class="puzzle-image" alt="bottm right piece">
+			<img src="images/bottomRight0.jpg" class="puzzle-image" alt="bottom right piece">
 		</div>
 
 		<!-- where we want to drop pieces, dropzone -->
@@ -32,8 +33,10 @@
 	</section>
 
 	<footer>
+		<h2 class="hidden">Footer</h2>
 		<p>Click on thumbnail to change pieces</p>
 		<nav id="buttonHolder">
+			<h2 class="hidden">Thumbnails</h2>
 			<img id="0" src="images/buttonZero.jpg" alt="puzzle 1">
 			<img id="1" src="images/buttonOne.jpg" alt="puzzle 2">
 			<img id="2" src="images/buttonTwo.jpg" alt="puzzle 3">
